cabal-version:      3.4
name:               AOC2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             m3dry
maintainer:         m3dry@tutamail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable AOC2024
    import:           warnings
    main-is:          Main.hs
    other-modules:
        , Utility
        , Day1
        , Day2
        , Day3
        , Day4
        , Day5
        , Day6
        , Day7
        , Day8
        , Day9
        , Day10
        , Day11
        , Day12
        , Day13
        , Day14
        , Day15
        , Day16
        , Day17
        , Day18
        , Day19
    -- other-extensions:
    build-depends:
        , base ^>=4.19.1.0
        , filepath
        , array
        , megaparsec
        , containers
        , search-algorithms
    hs-source-dirs:   src
    default-language: GHC2021
